clientlogin: fix claudius head stretch on mobile build

--- a/src/clientlogin.scss
+++ b/src/clientlogin.scss
@@ -64,6 +64,7 @@
       }
       img {
         margin: auto;
+        height: auto;
         max-height: 25rem;
         width: auto;
         max-width: 100%;
